--- a/src/features/registration-form/upload-document/upload-document.component.html
+++ b/src/features/registration-form/upload-document/upload-document.component.html
@@ -92,6 +92,6 @@
 >
   <div class="flex flex-col gap-6 mt-6 mb-6">
     <div class="uploading-loop-94-icon self-center"></div>
-    <h3 class="medium neutrals-text-950 mt-0 mb-0 self-center text-center w-[500px]">המערכת טוענת את הקובץ למערכת</h3>
+    <h3 class="medium neutrals-text-950 mt-0 mb-0 self-center text-center gt-lg-tablet:w-[500px] lt-lg-tablet:w-[100%]">המערכת טוענת את הקובץ למערכת</h3>
   </div>
 </ng-template>
