--- a/src/features/reset-password-form/form-container-reset-password/choose-verify-type/choose-verify-type.component.html
+++ b/src/features/reset-password-form/form-container-reset-password/choose-verify-type/choose-verify-type.component.html
@@ -22,12 +22,12 @@
     <div class="self-center">
       <smarti-input-number *ngIf="radioValue?.value?.name == 'phone'"
         [centerVerify]="true"
-        [customWidth]="'536px'"
+        [customWidth]="customWidth"
         [maxLength]="10"
         [control]="emailOrPhone"
       ></smarti-input-number>
       <smarti-input-field *ngIf="radioValue?.value?.name == 'email'"
-        [customWidth]="'536px'"
+        [customWidth]="customWidth"
         [control]="emailOrPhone"
       ></smarti-input-field>
     </div>
@@ -37,11 +37,11 @@
   </div>
 
   <div
-    class="mb-16 mt-10 flex justify-end gap-70 mr-14"
+    class="mb-16 mt-10 flex justify-end gap-70 gt-lg-tablet:mr-14 lt-lg-tablet:px-2"
     [ngClass]="isModeChosen ? 'mt-10' : 'mt-64'"
   >
     <smarti-button
-      [customButtonWidth]="'431px'"
+      [customButtonWidth]="customButtonWidth"
       [typeClass]="'confirm'"
       [text]="'המשך'"
       [disabled]="isDisabled"
