--- a/src/features/reset-password-form/form-container-reset-password/set-new-password/set-new-password.component.html
+++ b/src/features/reset-password-form/form-container-reset-password/set-new-password/set-new-password.component.html
@@ -2,14 +2,14 @@
   <h3 class="mt-10 medium text-center neutrals-text-950">הכניסו סיסמא חדשה</h3>
   <div class="mt-24 flex justify-center">
     <smarti-input-password
-      [customWidth]="'536px'"
+      [customWidth]="customWidth"
       [placeholder]="'סיסמא*'"
       (outputValue)="onChangeFirstPasswordValue($event)"
     ></smarti-input-password>
   </div>
   <div class="mt-14 flex justify-center">
     <smarti-input-password
-      [customWidth]="'536px'"
+      [customWidth]="customWidth"
       [placeholder]="'הכנס סיסמא בשנית*'"
       [control]="passwordControl"
       (outputValue)="onChangeSecondPasswordValue($event)"
@@ -19,7 +19,7 @@
     <smarti-button
       [text]="'איפוס סיסמא'"
       [typeClass]="'confirm'"
-      [customButtonWidth]="'256px'"
+      [customButtonWidth]="customButtonWidth"
       [disabled]="isDisabled"
       (buttonClicked)="openSuccessDialog(successDialogTemplate)"
     ></smarti-button>
