--- a/src/assets/styles/flex.scss
+++ b/src/assets/styles/flex.scss
@@ -1,6 +1,31 @@
 .flex {
   display: flex;
 }
+.row-cols-4 > * {
+  flex: 0 0 auto;
+  width: 25%;
+}
+.row {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--bs-gutter-y));
+  margin-right: calc(-0.5 * var(--bs-gutter-x));
+  margin-left: calc(-0.5 * var(--bs-gutter-x));
+}
+.row > * {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  margin-top: var(--bs-gutter-y);
+}
+.row-cols-2 > * {
+  flex: 0 0 auto;
+  width: 50%;
+}
 
 .flex-1 {
   flex: 1;
