--- a/src/assets/styles/radio.scss
+++ b/src/assets/styles/radio.scss
@@ -75,3 +75,23 @@ tui-radio-block {
     }
   }
 }
+@media screen and (max-width: 1024px) {
+  tui-radio-labeled {
+    .t-wrapper {
+      align-items: center !important;
+    }
+
+    .t-content {
+      margin-right: 36px!important;
+      color: $neutrals-500 !important;
+      text-align: right !important;
+      font-family: Rubik, sans-serif !important;
+      font-size: 14px !important;
+      font-style: normal !important;
+      font-weight: 400 !important;
+      line-height: 28px !important;
+    }
+  }
+}
+
+
