--- a/src/features/registration-form/confirm-payment-form/confirm-payment-form.component.html
+++ b/src/features/registration-form/confirm-payment-form/confirm-payment-form.component.html
@@ -1,5 +1,5 @@
 <div [formGroup]="confirmPaymentForm">
-  <div class="flex justify-center">
+  <div class="justify-center  gt-lg-tablet:flex">
     <smarti-progress-bar [currentUrl]="currentUrl"></smarti-progress-bar>
   </div>
   <h3 class="medium text-center mb-0 dir-rtl mt-6">
@@ -8,7 +8,7 @@
   <div class="neutrals-text-950 text-center paragraph-text">
     כעת יש לציין את תאריך הערך בו בוצע התשלום ולטעון את האסמכתא על התשלום
   </div>
-  <div class="mt-4 mx-auto flex justify-around w-[516px] h-[80px] rounded-l bg-mint">
+  <div class="mt-4 mx-auto flex justify-around h-[80px] rounded-l bg-mint flex  gt-lg-tablet:w-[516px] lt-lg-tablet:w-[100%]">
     <div class="flex gap-2">
       <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">
         {{ currentStorageData.total }}ש״ח
@@ -32,7 +32,7 @@
   <div class="flex justify-center">
     <smarti-input-file
       [accept]="'.pdf'"
-      [customWidth]="'536px'"
+      [customWidth]="customWidth"
       [customHeight]="'150px'"
       [control]="confirmPaymentForm.controls.files"
       (fileUploaded)="fileUploaded($event)"
