--- a/src/pages/reset-password/reset-password.component.html
+++ b/src/pages/reset-password/reset-password.component.html
@@ -1,9 +1,9 @@
 <div class="bg-neutrals-20">
   <smarti-header-auth-layout [haveLeftBLock]="false"></smarti-header-auth-layout>
   <div class="w-full-hd margin-0-auto">
-    <div class="flex justify-between">
-      <div class="puzzle-with-people-img"></div>
-      <h1 class="medium text-right self-center neutrals-text-950">סיסמא חדשה</h1>
+    <div class="gt-lg-tablet:flex justify-between">
+      <div class="puzzle-with-people-img lt-lg-tablet:hidden"></div>
+      <h1 class="medium text-right self-center neutrals-text-950 dir-rtl">סיסמא חדשה</h1>
     </div>
     <smarti-reset-password-form></smarti-reset-password-form>
   </div>
