--- a/src/shared/dialog/bank-details-dialog/bank-details-dialog.component.html
+++ b/src/shared/dialog/bank-details-dialog/bank-details-dialog.component.html
@@ -1,47 +1,75 @@
 <div class="flex flex-col justify-center mt-6 mb-6">
-  <h3 class="mt-0 mb-0 neutrals-text-950 text-center dir-rtl">סה״כ לתשלום:</h3>
-  <div class="mt-12 flex justify-around w-[658px] h-[80px] rounded-l bg-mint self-center">
-    <div class="flex gap-2">
+  <h3 class="medium text-center mb-0 dir-rtl mx-4">הנתונים שהתקבלו לפי הקובץ שנקלט:</h3>
+
+  <div class="mt-12 flex justify-around self-center gt-lg-tablet:w-[658px] lt-lg-tablet:w-[100%] h-[80px] rounded-l bg-mint lt-lg-tablet:pt-2">
+    <div class="flex gap-2 lt-lg-tablet:flex-col dir-rtl">
+      <div class="paragraph-text neutrals-text-950 self-center ">סה״כ סכום לתשלום לקופות:</div>
       <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">
-        {{ currentStorageData.total | number: "1.2-2" }} ש״ח
+
+        {{ currentStorageData.total | number: "1.2-2" }}ש״ח
       </div>
-      <div class="paragraph-text neutrals-text-950 self-center dir-rtl">סה״כ סכום לתשלום לקופות:</div>
     </div>
-    <div class="flex gap-2">
+    <div class="flex gap-2 lt-lg-tablet:flex-col dir-rtl">
+      <div class="paragraph-text neutrals-text-950 self-center dir-rtl">מספר העובדים:</div>
       <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">
         {{ currentStorageData.employeesCount }}
       </div>
-      <div class="paragraph-text neutrals-text-950 self-center dir-rtl">מספר העובדים:</div>
     </div>
   </div>
+
   <h3 class="mt-10 mb-0 neutrals-text-950 text-center dir-rtl">לאן להעביר את התשלום?</h3>
-  <div class="flex flex-col self-center mt-9 w-[600px]">
-    <div class="flex flex-row justify-center">
-      <div class="flex flex-row">
-        <div class="neutrals-text-950 medium-text !leading-10 dir-rtl w-[360px]">
+
+<!--  <div class="flex flex-col self-center mt-9 gt-lg-tablet:w-[600px]">-->
+<!--    <div class="flex  gt-lg-tablet:flex-row lt-lg-tablet:flex-col items-flex-end">-->
+<!--      <div class="flex flex-row gap-4">-->
+<!--        <div class="neutrals-text-950 medium-text !leading-10 dir-rtl">-->
+<!--          {{ !isEmptyString(bankDetailsSmarti?.bank_name) ? bankDetailsSmarti?.bank_name : "-" }}-->
+<!--        </div>-->
+<!--        <div class="neutrals-text-950 regular-text dir-rtl self-center">שם הבנק:</div>-->
+<!--      </div>-->
+<!--      <div class="flex flex-row gap-4">-->
+<!--        <div class="neutrals-text-950 medium-text !leading-10 dir-rtl">smarti</div>-->
+<!--        <div class="neutrals-text-950 regular-text dir-rtl self-center">שם החברה:</div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <div class="flex  gt-lg-tablet:flex-row lt-lg-tablet:flex-col items-flex-end">-->
+<!--      <div class="flex flex-row gap-4">-->
+<!--        <div class="neutrals-text-950 medium-text !leading-10 dir-rtl">-->
+<!--          {{ !isEmptyString(bankDetailsSmarti?.number) ? bankDetailsSmarti?.number : "-" }}-->
+<!--        </div>-->
+<!--        <div class="neutrals-text-950 regular-text dir-rtl self-center">מספר חשבון:</div>-->
+<!--      </div>-->
+<!--      <div class="flex flex-row gap-4">-->
+<!--        <div class="neutrals-text-950 medium-text !leading-10 dir-rtl">-->
+<!--          {{ !isEmptyString(bankDetailsSmarti?.branch_number) ? bankDetailsSmarti?.branch_number : "-" }}-->
+<!--        </div>-->
+<!--        <div class="neutrals-text-950 regular-text dir-rtl self-center">מספר סניף:</div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+  <div class="self-center mt-9 dir-rtl" [ngClass]="{'w-[600px] row-cols-2 row': !isMobile}">
+      <div class="flex flex-row gap-4 items-center">
+        <div class="neutrals-text-950 regular-text">שם הבנק:</div>
+        <div class="neutrals-text-950 medium-text !leading-10">
           {{ !isEmptyString(bankDetailsSmarti?.bank_name) ? bankDetailsSmarti?.bank_name : "-" }}
         </div>
-        <div class="neutrals-text-950 regular-text dir-rtl self-center w-[120px]">שם הבנק:</div>
       </div>
-      <div class="flex flex-row">
-        <div class="neutrals-text-950 medium-text !leading-10 dir-rtl w-[160px]">smarti</div>
-        <div class="neutrals-text-950 regular-text dir-rtl self-center w-[120px]">שם החברה:</div>
+      <div class="flex flex-row gap-4">
+        <div class="neutrals-text-950 regular-text dir-rtl self-center">שם החברה:</div>
+        <div class="neutrals-text-950 medium-text !leading-10 dir-rtl">smarti</div>
       </div>
-    </div>
-    <div class="flex flex-row justify-center">
-      <div class="flex flex-row">
-        <div class="neutrals-text-950 medium-text !leading-10 dir-rtl w-[360px]">
+      <div class="flex flex-row gap-4">
+        <div class="neutrals-text-950 regular-text dir-rtl self-center">מספר חשבון:</div>
+        <div class="neutrals-text-950 medium-text !leading-10 dir-rtl">
           {{ !isEmptyString(bankDetailsSmarti?.number) ? bankDetailsSmarti?.number : "-" }}
         </div>
-        <div class="neutrals-text-950 regular-text dir-rtl self-center w-[120px]">מספר חשבון:</div>
       </div>
-      <div class="flex flex-row">
-        <div class="neutrals-text-950 medium-text !leading-10 dir-rtl w-[160px]">
+      <div class="flex flex-row gap-4">
+        <div class="neutrals-text-950 regular-text dir-rtl self-center">מספר סניף:</div>
+        <div class="neutrals-text-950 medium-text !leading-10 dir-rtl">
           {{ !isEmptyString(bankDetailsSmarti?.branch_number) ? bankDetailsSmarti?.branch_number : "-" }}
         </div>
-        <div class="neutrals-text-950 regular-text dir-rtl self-center w-[120px]">מספר סניף:</div>
       </div>
-    </div>
   </div>
   <div class="flex justify-center mt-28">
     <smarti-button
