--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,9 +54,8 @@ body {
 .items-center {
   align-items: center;
 }
-
 .items-flex-end {
-  align-items: flex-end;
+  align-items: end;
 }
 
 .self-center {
